# NAIR_Android

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/main/assets/shaders/: shader.comp  shader.comp.spv
app/src/main/cpp/: App.cpp  App.h  CMakeLists.txt  ComputePass.cpp  ComputePass.h  DebugMessenger.cpp  DebugMessenger.h  SimpleRender.cpp  SimpleRender.h  SimpleVulkanContext.cpp  SimpleVulkanContext.h
app/src/main/java/com/msu/course/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
